fix: final production CORS and auth reset parity with user recommendation (v3)